2003-08-19  Derek Price  <derek@ximbiot.com>

	* logmsg.c (do_editor): Move editinfo processing to before creation of
	the temp file so that it may be skipped when no editor is defined.
	Remove related FIXME.  Add comments.  Remove some processing of
	editinfo_editor rendered obsolete when editinfo_editor ceased to be a
	global.

2003-08-19  Derek Price  <derek@ximbiot.com>

	* (*.c): Move some includes to lib/system.h.

2003-08-18  Derek Price  <derek@ximbiot.com>

	* add.c (add): Use consistent quoting style in user messages.
	* sanity.sh (*): Ditto.

2003-08-13  Larry Jones  <lawrence.jones@eds.com>

	* server.c (server_cleanup): Don't shutdown buf_from_net if it's
	null.
	(Reported by Scott Mitchell <scott@fishballoon.org>.)

2003-08-03  Mark D. Baushke  <mdb@cvshome.org>

	* lock.c: Do not include xtime.h (already included via system.h).
	* subr.c: Ditto.
	(Original patch from Rainer Orth <ro@TechFak.Uni-Bielefeld.DE>
	to fix IRIX 5.3 problem.)
	
2003-08-01  Derek Price  <derek@ximbiot.com>

	* sanity.sh (join5): Use $SPROG rather than $PROG.

2003-08-01  Derek Price  <derek@ximbiot.com>

	* sanity.sh (join5): Use $PROG consistently and escape a `.'.

2003-08-01  Derek Price  <derek@ximbiot.com>

	* sanity.sh (join5): Use `[a-z]*' as opposed to `update'.

2003-07-31  Derek Price  <derek@ximbiot.com>

	* rcscmds.c (RCS_merge): Pass `--' before the filename arguments to
	diff so that filenames starting with `-' can be merged.
	* sanity.sh (join5): New test for same.

2003-07-31  Derek Price  <derek@ximbiot.com>

	* add.c (add_directory): Don't print status information in really_quiet
	mode.

2003-07-29  Derek Price  <derek@ximbiot.com>

	* checkout.c (checkaddfile): Simplify the logic here, using assumptions
	already made later in the function to remove calls to locate_rcs and
	some conditionals.  Use same assumptions to remove some variables.

2003-07-29  Derek Price  <derek@ximbiot.com>

	* login.c: Remove GETPASS & HAVE_GETPASSPHRASE cruft in favor of always